config/kustomize/extras/ciliumnetworkpolicy-capv-controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-vsphere
    control-plane: controller-manager
  name: capv-controller-manager
spec:
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-vsphere
      control-plane: controller-manager
  egress:
    - toEntities:
        - kube-apiserver
