config/kustomize/extras/networkpolicy-capv-controller-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-vsphere
    control-plane: controller-manager
  name: capv-controller-manager
spec:
  podSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-vsphere
      control-plane: controller-manager
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 6443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: 53
          protocol: UDP
        - port: 1053
          protocol: UDP
        - port: 53
          protocol: TCP
        - port: 1053
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Egress
